refactor and add stop words

--- a/views/ESN Directory.html
+++ b/views/ESN Directory.html
@@ -703,7 +703,7 @@ document.getElementById('search-btn-private').addEventListener('click', async fu
             .then((response) => response.json())
             .then((data) => {
               console.log('Status got successfully:', data.data.status)
-              resolve(data.data.status.status)
+              resolve(data.data.status)
             })
             .catch((error) => {
               console.error('Error getting status:', error)
