--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -29,6 +29,7 @@
 
         <div class="post">
           <button id="send-msg">Post</button>
+          <button id="see-more-btn">See More</button>
         </div>
         
       </div>
@@ -199,7 +200,7 @@
 
       .logo {
         background: #89bbf5;
-        font-size: 25px;
+        font-size: 23px;
         font-weight: bold;
         display: flex;
         justify-content: left;
@@ -296,6 +297,19 @@
         font-size: 22px;
         margin-top: 5px;
         margin-bottom: 5px;
+      }
+
+      .post #see-more-btn {
+        border-radius: 10px;
+        height: 35px;
+        border: 1px solid black;
+        background-color: #fab855;
+        color: black;
+        font-weight: 900;
+        font-size: 22px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        margin-left:5px;
       }
 
       .messageContainer {
